[[bin]]
name = "Document"
path = "Source/Fn/Binary/Document.rs"

[build-dependencies]
serde = { version = "1.0.217", features = ["derive"] }
toml = { version = "0.8.20" }

[dependencies]
clap = { version = "4.5.30", features = ["cargo"] }
proc_use = { version = "0.2.1" }
rayon = { version = "1.10.0" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138" }
toml = { version = "0.8.20" }

[lib]
name = "Library"
path = "Source/Library.rs"

[package]
autobenches = false
autobins = false
autoexamples = false
autotests = false
default-run = "Document"
documentation = "https://Documentation.Document.Editor.Land"
edition = "2024"
homepage = "https://Document.Editor.Land"
license-file = "LICENSE"
name = "Document"
publish = false
repository = "https://github.com/CodeEditorLand/Document"
version = "0.0.1"
